fixed overflow styling issue

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -14,6 +14,7 @@ body {
 	height: 100%;
 	overflow: scroll;
 	padding: 0;
+	overflow: hidden;
 }
 
 #root {
